fixed climbing text size on mobile

--- a/style.css
+++ b/style.css
@@ -295,4 +295,7 @@ footer h3{
 	.interest-title h2 {
 		font-style: 200%;
 	}
+	#climbing h1 {
+		font-size: 300%
+	}
 }
